spacing fix on job list

--- a/scss/pages/employer/_employerJobListing.scss
+++ b/scss/pages/employer/_employerJobListing.scss
@@ -2,7 +2,6 @@
   border: 1px solid lightgray;
   border-radius: 5px;
   margin: 20px 0 20px 0;
-  height: 15%;
 
   a {
     text-decoration: none;
