--- a/scss/parts/_jobList.scss
+++ b/scss/parts/_jobList.scss
@@ -16,6 +16,7 @@
     padding: 0 2%;
     overflow: scroll;
     overflow-x: hidden;
+    height: 80vh;
   }
 
 // This is job seeker side
