--- a/scss/parts/_jobListing.scss
+++ b/scss/parts/_jobListing.scss
@@ -3,7 +3,6 @@
   border-radius: 5px;
   margin: 20px 0 20px 0;
   padding: 10px 0 20px 0;
-  height: 15%;
 
   a {
     text-decoration: none;
